--- a/.gitignore
+++ b/.gitignore
@@ -3,4 +3,6 @@ Relazione_SISTEMA DI GESTIONE SARTORIA.pdf
 .dist
 .history/
 backup_sartoria.dat
-main.exe
+/Programma/main.exe
+/server/rotoli_data.txt
+api_handler.exe
