--- a/.gitignore
+++ b/.gitignore
@@ -4,5 +4,4 @@ Relazione_SISTEMA DI GESTIONE SARTORIA.pdf
 .history/
 backup_sartoria.dat
 /Programma/main.exe
-/server/rotoli_data.txt
-api_handler.exe
+/web/dati.json
